# app/Http/Requests/LoginRequest.php
@@ -23,7 +23,8 @@ class LoginRequest extends FormRequest
     {
         return [
             'email' => ['required', 'email', 'exists:users,email'],
-            'password' => 'required'
+            'password' => 'required',
+            'remember_me'=>'nullable'
         ];
     }
 
